--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
